<resources>
    <string name="app_name">NewAndroidApp</string>
    <string name="email_address">Email Address</string>
    <string name="Title">OnlineShop</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not registered?</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account!</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="add_new_product">Add new product</string>
    <string name="ProductTitle">Title</string>
    <string name="add_product">Add Product</string>
    <string name="available">Available</string>
    <string name="newOrders">New Orders</string>
    <string name="shipped">Shipped</string>
    <string name="orderReceived">Orders received</string>
    <string name="eshop">eShop</string>

    <string name="Skopje">Skopje</string>
    <string name="Kicevo">Kicevo</string>
    <string name="Bitola">Bitola</string>
    <string name="Ohrid">Ohrid</string>
    <string name="Struga">Struga</string>
    <string name="Gevgelija">Gevgelija</string>
    <string name="Tetovo">Tetovo</string>
    <string name="Veles">Veles</string>
    <string name="Stip">Stip</string>
    <string name="Gostivar">Gostivar</string>
    <string name="Strumica">Strumica</string>
    <string name="Kavadarci">Kavadarci</string>
    <string name="DemirHisar">Demir Hisar</string>
    <string name="Prilep">Prilep</string>
    <string name="Debar">Debar</string>
    <string name="Kumanovo">Kumanovo</string>
    <string name="MakedonksiBrod">Makedonksi Brod</string>


    <string-array name="usersType">
        <item>@string/admin</item>
        <item>@string/user</item>
    </string-array>
    <string-array name="filterByStatus">
        <item>@string/available</item>
        <item>@string/newOrders</item>
        <item>@string/shipped</item>
        <item>@string/orderReceived</item>

    </string-array>
    <string-array name="cityList">
        <item>@string/Skopje</item>
        <item>@string/Kicevo</item>
        <item>@string/Bitola</item>
        <item>@string/Ohrid</item>
        <item>@string/Struga</item>
        <item>@string/Gevgelija</item>
        <item>@string/Tetovo</item>
        <item>@string/Veles</item>
        <item>@string/Stip</item>
        <item>@string/Gostivar</item>
        <item>@string/Strumica</item>
        <item>@string/Kavadarci</item>
        <item>@string/DemirHisar</item>
        <item>@string/Prilep</item>
        <item>@string/Debar</item>
        <item>@string/Kumanovo</item>
        <item>@string/MakedonksiBrod</item>

    </string-array>
</resources>